--- a/_posts/2015-06-23-janetest.md
+++ b/_posts/2015-06-23-janetest.md
@@ -5,6 +5,6 @@ published: true
 
 
 
-[abc](http://praekelt.github.io/handbook/2015/06/23/abc.html "jane")
+[abc](http://praekelt.github.io/handbook/2015/06/23/abc.html "jane"[http://praekelt.github.io/handbook/2015/06/23/abc.html](http://praekelt.github.io/handbook/2015/06/23/abc.html "tooltip?"))
 def
 ghi
