--- a/_posts/2015-06-29-Our Blog.md
+++ b/_posts/2015-06-29-Our Blog.md
@@ -1,6 +1,6 @@
 ---
-published: false
+published: true
 ---
 
-## Check out the Praekelt Foundation blog [here](http://blog.praekeltfoundation.org/)
 
+## Check out the Praekelt Foundation blog [here](http://blog.praekeltfoundation.org/)
