--- a/_posts/2015-06-07-Vumi.md
+++ b/_posts/2015-06-07-Vumi.md
@@ -4,7 +4,12 @@ layout: post
 ---
 
 
+
+### Vumi
+
+Vumi is an open source mobile messaging platform, developed and maintained by Praekelt Foundation and individual contributors. The project is released under the liberal BSD license.
+
+
 Take a look at the website [here](http://vumi.org/).
 
 And read the documentation [here](https://vumi.readthedocs.org/en/latest/)
-
