Updated 2015-06-05-Our Blog.md

--- a/_posts/2015-06-05-Our Blog.md
+++ b/_posts/2015-06-05-Our Blog.md
@@ -4,5 +4,4 @@ layout: post
 ---
 
 
-## Check out the Praekelt Foundation blog 
-[here](http://blog.praekeltfoundation.org/)
+## Check out our blog [here](http://blog.praekeltfoundation.org/)
